# rust-on-avr

./: Cargo.toml  README.md  shell.nix  toolchain.toml
.cargo/: config.toml
src/: main.rs  main.rs.back
